--- a/src/App.css
+++ b/src/App.css
@@ -335,7 +335,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     font-size: 18px;
     letter-spacing: 0.8px;
     line-height: 1.5em;
-    margin: 14px 0 75px 0;
+    margin: 14px 0 45px 0;
 }
 .skill-slider {
   width: 80%;
@@ -352,6 +352,24 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   bottom: 0;
   width: 40%;
   z-index: -4;
+}
+
+.skill button {
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0.8px;
+  margin-bottom: 50px;
+}
+
+.skill button svg {
+  font-size: 25px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+}
+.skill button:hover svg {
+  margin-left: 25px;
 }
 
 /************ Projects Css ************/
@@ -642,4 +660,6 @@ iframe {
   margin-bottom: 15%;
   width: 40%;
 }
+
+
 
