--- a/src/App.css
+++ b/src/App.css
@@ -503,7 +503,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .contact {
-  background-image: url('./assets/img/neb.png');
+  background-image: url('./assets/img/star.png');
+  background-size: cover;
   padding: 60px 0 200px 0;
 }
 .contact img {
