--- a/src/App.css
+++ b/src/App.css
@@ -272,11 +272,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: block;
 }
 .banner p {
-  color: #B8B8B8;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.607);
+
+  border: #3b00ee 5px solid;;
+  border-radius: 7px;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   width: 96%;
+  padding: 20px;
 }
 .banner button {
   color: #fff;
